monitor-system/logs/monitor-20251222-153410.log
node:internal/modules/cjs/loader:1230
    throw err;
    ^

SyntaxError: C:\WebsiteMonitor\monitor-system\config.json: Unexpected token , in JSON at position 1080
    at parse (<anonymous>)
    at Module._extensions..json (node:internal/modules/cjs/loader:1227:39)
    at Module.load (node:internal/modules/cjs/loader:1037:32)
    at Module._load (node:internal/modules/cjs/loader:878:12)
    at Module.require (node:internal/modules/cjs/loader:1061:19)
    at require (node:internal/modules/cjs/helpers:103:18)
    at Object.<anonymous> (C:\WebsiteMonitor\monitor-system\database.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1159:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1213:10)
    at Module.load (node:internal/modules/cjs/loader:1037:32)

Node.js v18.12.1
